add icon to page bottom

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, excersise">
 
     <title>Love Running</title>
-
-    <?------Favicon------>
     
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -39,7 +37,13 @@
 
     <main>Main content</main>
 
-    <footer>Footer</footer>
-    
+    <footer>
+        <ul>
+            <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+
+    <script src="https://kit.fontawesome.com/59fa971d0d.js" crossorigin="anonymous"></script>
 </body>
 </html>
