style footer icons to fit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>Main content</main>
 
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li>
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener"
