--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         </ul>
     </nav>
 
-    <main>Main content</main>
+    <main>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoniex Park</h3>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <ul id="social-networks">
